--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<div class="produts_item item-products">
 							<a href="" class="item-products__img _ibg">
 								<picture>
-									<source srcset="../img/products/01.webp" type="image/webp"><img src="../img/products/01.jpg"
+									<source srcset="img/products/01.webp" type="image/webp"><img src="img/products/01.jpg"
 										alt="">
 								</picture>
 							</a>
@@ -92,7 +92,7 @@
 						<div class="produts_item item-products">
 							<a href="" class="item-products__img _ibg">
 								<picture>
-									<source srcset="../img/products/02.webp" type="image/webp"><img src="../img/products/02.jpg"
+									<source srcset="img/products/02.webp" type="image/webp"><img src="img/products/02.jpg"
 										alt="">
 								</picture>
 							</a>
@@ -108,7 +108,7 @@
 						<div class="produts_item item-products">
 							<a href="" class="item-products__img _ibg">
 								<picture>
-									<source srcset="../img/products/03.webp" type="image/webp"><img src="../img/products/03.jpg"
+									<source srcset="img/products/03.webp" type="image/webp"><img src="img/products/03.jpg"
 										alt="">
 								</picture>
 							</a>
@@ -124,7 +124,7 @@
 						<div class="produts_item item-products">
 							<a href="" class="item-products__img _ibg">
 								<picture>
-									<source srcset="../img/products/04.webp" type="image/webp"><img src="../img/products/04.jpg"
+									<source srcset="img/products/04.webp" type="image/webp"><img src="img/products/04.jpg"
 										alt="">
 								</picture>
 							</a>
